# SyncWorkCalendar

./: .dockerignore  .editorconfig  .env.template  .gitignore  README.md  main.ipynb  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_08_23_1849-a8cf9e93c99e_createt_tcproject.py  2024_08_23_1902-82f082ce0b72_create_tcentry.py  2024_08_29_1713-5f712ea0757b_add_tabele_key_templates.py  2024_09_01_2031-c40c9aa08896_add_jira_project.py  2024_09_02_1857-b06c330985ba_create_jira_user.py  2024_09_02_2035-18ab6105da41_create_jira_issue_table.py  2024_09_21_1633-305acbc3994b_add_table_jira_worklog.py  2024_09_29_1507-6a1b0bf819e8_add_table_worklog_sync_task.py  2024_09_29_1713-5f712ea0757b_add_tabele_key_templates.py  2024_10_02_2217-b4117e0c3dd4_update_column_started_at_jr_worklogs.py
src/: config.py
src/core/: __init__.py  db_helper.py
src/core/utils/: __init__.py  sync_task_service.py
src/dao/: __init__.py  base_dao.py  jr_issues_dao.py  jr_project_dao.py  jr_users_dao.py  jr_worklog_dao.py  key_template_dao.py  tc_entries_dao.py  tc_project_dao.py  worklog_sync_task_dao.py
src/models/: __init__.py  base.py  jr_issue.py  jr_project.py  jr_user.py  jr_worklog.py  key_template.py  tc_entry.py  tc_project.py  worklog_sync_task.py
src/services/jira/: __init__.py  dto.py  jira_service.py
src/services/time_camp/: __init__.py  dto.py  tc_request_service.py
src/tasks/: jira_update_task.py  time_camp_update_task.py  worllog_sync_task.py
src/utils/: __init__.py  case_converter.py
